--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ html
 <body>
     <h1>Bienvenidos a la Práctica de Git y GitHub</h1>
     <p>Esta es una página simple para aprender los conceptos básicos de Git y GitHub.</p>
+    <p>Esta págia es para práctica</p>
 </body>
 
 </html>
